--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Achievement Hub</title>
+        <script src="static/app.js"></script>
     </head>
     <body>
-        <form action="/api/getuid" method="post">
-            <input type="text" name="username"></input>
+        <form id="submitUsername" onsubmit="submitUsername(event)">
+            <input id="usernameInput" type="text" name="username"></input>
             <input type="submit"></input>
         </form>
     </body>
