Re-did form submission to action, not onsubmit. JavaScript file removed for now. Testing Username to UID error handling.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <title>Achievement Hub</title>
-        <script src="static/app.js"></script>
     </head>
     <body>
-        <form id="submitUsername" onsubmit="submitUsername(event)">
+        <form id="submitUsername" action="/api/playerachievements", method="post">
             <input id="usernameInput" type="text" name="username"></input>
             <input type="submit"></input>
         </form>
